[project]
name = "library-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.0",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "flagembedding>=1.4.0",
    "gliner2>=1.3.1",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.4",
    "mcp[cli]>=1.8.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "transformers>=5.1.0",
    "uvicorn>=0.49.0",
]
